Bug 127605 - FILEOPEN DOCX Hyperlink does not work in Microsoft Word when the target is image
Summary: FILEOPEN DOCX Hyperlink does not work in Microsoft Word when the target is image
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
3.5.0 release
Hardware: All All
: medium normal
Assignee: Tünde Tóth
URL:
Whiteboard: target:6.4.0
Keywords: filter:docx
Depends on:
Blocks: DOCX-Hyperlink
  Show dependency treegraph
 
Reported: 2019-09-17 14:56 UTC by NISZ LibreOffice Team
Modified: 2019-10-04 05:55 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments
Example file from Writer (14.62 KB, application/vnd.openxmlformats-officedocument.wordprocessingml.document)
2019-09-17 14:56 UTC, NISZ LibreOffice Team
Details
Example odt from Writer (9.72 KB, application/vnd.oasis.opendocument.text)
2019-09-17 15:00 UTC, NISZ LibreOffice Team
Details

Note You need to log in before you can comment on or make changes to this bug.
Description NISZ LibreOffice Team 2019-09-17 14:56:51 UTC
Created attachment 154234 [details]
Example file from Writer

Hyperlink with image target in DOCX documents created with Writer is broken when the document is opened in Word.


Steps to reproduce:
1.	Create a document in LibreOffice.
2.	Insert a page break and a picture.
3.	Click on the first page.
4.	Insert a hyperlink and set the picture as the target of the hyperlink.
5.	Save the document in DOCX format.
6.	Open the file with Microsoft Word.
7.	Notice, that the hyperlink does not work.

Actual results:
The hyperlink doesn’t work.

Expected results:
The hyperlink should work in Word.

LibreOffice details:
Version: 6.4.0.0.alpha0+ (x64)
Build ID: 632ee9aae6d5f3cf08b6d6b2789310c20db713b7
CPU threads: 4; OS: Windows 10.0; UI render: GL; VCL: win;
Locale: hu-HU (hu_HU); UI-Language: en-US
Calc: threaded
Comment 1 NISZ LibreOffice Team 2019-09-17 15:00:05 UTC
Created attachment 154235 [details]
Example odt from Writer
Comment 2 Dieter 2019-09-18 20:15:36 UTC
I confirm, that hyperlink works with

Version: 6.4.0.0.alpha0+ (x64)
Build ID: f0c832acb53326ccc9a8c1a47401fbc9e1081feb
CPU threads: 4; OS: Windows 10.0; UI render: GL; VCL: win; 
TinderBox: Win-x86_64@62-TDF, Branch:master, Time: 2019-09-11_05:46:53
Locale: de-DE (de_DE); UI-Language: en-US
Calc: threaded


but not with MS Word 2016
Comment 3 Commit Notification 2019-09-23 11:13:38 UTC
Tünde Tóth committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/89ffe6149a0e14bcde89d7981362aa1556849ab0

tdf#127605 DOCX export: fix internal hyperlinks to image target

It will be available in 6.4.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 Dieter 2019-10-04 05:55:38 UTC
Verified with

Version: 6.4.0.0.alpha0+ (x64)
Build ID: 460908269972fd1f89312a1e62897ed1503e9e98
CPU threads: 4; OS: Windows 10.0; UI render: default; VCL: win; 
TinderBox: Win-x86_64@42, Branch:master, Time: 2019-09-30_09:18:03
Locale: de-DE (de_DE); UI-Language: en-US
Calc: threaded