tdf#127605 DOCX export: fix internal hyperlinks to image target

jumping to the paragraph anchored by the image as a workaround.

Change-Id: Iff4feacca0cc9c790028d72fb834e8cf066c95e1
Reviewed-on: https://gerrit.libreoffice.org/79081
Reviewed-by: László Németh <nemeth@numbertext.org>
Tested-by: László Németh <nemeth@numbertext.org>